--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,46 @@
-asn1crypto==0.24.0
-boto==2.49.0
-boto3==1.9.42
-botocore==1.12.42
-bz2file==0.98
-certifi==2018.10.15
-cffi==1.11.5
+absl-py==0.10.0
+astunparse==1.6.3
+cachetools==4.1.1
+certifi==2020.6.20
 chardet==3.0.4
-cryptography==2.4.1
-docutils==0.14
-et-xmlfile==1.0.1
-gensim==3.6.0
-idna==2.7
-jdcal==1.4
-jieba==0.39
-jmespath==0.9.3
-numpy==1.15.4
-openpyxl==2.5.10
-pandas==0.23.4
-pycparser==2.19
-PyMySQL==0.9.2
-python-dateutil==2.7.5
-pytz==2018.7
-requests==2.20.1
-s3transfer==0.1.13
-scikit-learn==0.20.0
-scipy==1.1.0
-six==1.11.0
+gast==0.3.3
+gensim==3.8.3
+google-auth==1.22.1
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+grpcio==1.32.0
+h5py==2.10.0
+idna==2.10
+importlib-metadata==2.0.0
+jieba==0.42.1
+joblib==0.17.0
+Keras-Preprocessing==1.1.2
+Markdown==3.3.1
+numpy==1.18.5
+oauthlib==3.1.0
+opt-einsum==3.3.0
+pandas==1.1.3
+protobuf==3.13.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+python-dateutil==2.8.1
+pytz==2020.1
+requests==2.24.0
+requests-oauthlib==1.3.0
+rsa==4.6
+scikit-learn==0.23.2
+scipy==1.5.2
+six==1.15.0
 sklearn==0.0
-smart-open==1.7.1
-urllib3==1.24.1
-xlrd==1.1.0
-xlwt==1.3.0
+smart-open==3.0.0
+tensorboard==2.3.0
+tensorboard-plugin-wit==1.7.0
+tensorflow-estimator==2.3.0
+tensorflow-gpu==2.3.1
+termcolor==1.1.0
+threadpoolctl==2.1.0
+tqdm==4.50.2
+urllib3==1.25.10
+Werkzeug==1.0.1
+wrapt==1.12.1
+zipp==3.3.1
