--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ astunparse==1.6.3
 cachetools==4.1.1
 certifi==2020.6.20
 chardet==3.0.4
+Cython==0.29.14
 gast==0.3.3
 gensim==3.8.3
 google-auth==1.22.1
@@ -15,7 +16,7 @@ importlib-metadata==2.0.0
 jieba==0.42.1
 joblib==0.17.0
 Keras-Preprocessing==1.1.2
-Markdown==3.3.1
+Markdown==3.3.2
 numpy==1.18.5
 oauthlib==3.1.0
 opt-einsum==3.3.0
@@ -29,18 +30,18 @@ requests==2.24.0
 requests-oauthlib==1.3.0
 rsa==4.6
 scikit-learn==0.23.2
-scipy==1.5.2
+scipy==1.4.1
 six==1.15.0
 sklearn==0.0
 smart-open==3.0.0
 tensorboard==2.3.0
 tensorboard-plugin-wit==1.7.0
+tensorflow==2.3.0
 tensorflow-estimator==2.3.0
-tensorflow-gpu==2.3.1
 termcolor==1.1.0
 threadpoolctl==2.1.0
 tqdm==4.50.2
-urllib3==1.25.10
+urllib3==1.25.11
 Werkzeug==1.0.1
 wrapt==1.12.1
 zipp==3.3.1
