--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,7 @@
-absl-py==0.10.0
-astunparse==1.6.3
-cachetools==4.1.1
-certifi==2020.6.20
-chardet==3.0.4
-Cython==0.29.14
-gast==0.3.3
-gensim==3.8.3
-google-auth==1.22.1
-google-auth-oauthlib==0.4.1
-google-pasta==0.2.0
-grpcio==1.32.0
-h5py==2.10.0
-idna==2.10
-importlib-metadata==2.0.0
-jieba==0.42.1
-joblib==0.17.0
-Keras-Preprocessing==1.1.2
-Markdown==3.3.2
-numpy==1.18.5
-oauthlib==3.1.0
-opt-einsum==3.3.0
-pandas==1.1.3
-protobuf==3.13.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-python-dateutil==2.8.1
-pytz==2020.1
-requests==2.24.0
-requests-oauthlib==1.3.0
-rsa==4.6
-scikit-learn==0.23.2
-scipy==1.4.1
-six==1.15.0
-sklearn==0.0
-smart-open==3.0.0
-tensorboard==2.3.0
-tensorboard-plugin-wit==1.7.0
-tensorflow==2.3.0
-tensorflow-estimator==2.3.0
-termcolor==1.1.0
-threadpoolctl==2.1.0
+tensorflow-gpu==2.3.0
 tqdm==4.50.2
+gensim==3.8.3
+jieba==0.42.1
+pandas==1.1.3
+scikit-learn==0.23.2
 transformers==4.6.1
-urllib3==1.25.11
-Werkzeug==1.0.1
-wrapt==1.12.1
-zipp==3.3.1
